LightBDD
===========================================

Version 2.5.0
----------------------------------------
Summary:
+ #60 Implemented Project Templates in VSIX extension
+ #61 Implemented snippets for scenario and composite steps in VSIX extension

Version 2.4.3
----------------------------------------
Summary:
+ #145 (LightBDD.Core)(Fix) NULL value not assignable to Nullable<bool> parameter

Version 2.4.2
----------------------------------------
Summary:
+ #127 (LightBDD.Core)(Fix) Fixed FeatureRunnerRepository to instantiate FeatureRunner once per feature type
+ #128 (LightBDD.MsTest2)(Change) Updated progress notifiers to work with scenarios executed in parallel
+ #134 (LightBDD.Framework)(New) Added State<T> helper struct managing uninitialized shared state fields
+ #135 (all)(New) Added sourcelink integration to all packages
+ #137 (LightBDD.Framework)(Bug) Unable to specify absolute path to report location on Linux

Version 2.4.1
----------------------------------------
Summary:
+ #122 (LightBDD.Extensions.DependencyInjection)(New) Provided integration with DI containers implementing Microsoft DI abstractions
+ #123 (LightBDD.XUnit2)(Change) Improved experience with running parameterized scenarios

Version 2.4.0
----------------------------------------
Summary:
+ #38 (all)(New) Added ability to specify verifiable parameters
+ #38 (all)(New) Added Expect.To.* expectation expressions
+ #59 (Core)(New) Added support for DI container
+ #59 (Framework)(New) Implemented default DI container
+ #59 (Autofac)(New) Added LightBDD.Autofac integration for Autofac DI container
+ #67 (Fixie)(New) Added LightBdd.Fixie2 integration project with https://github.com/fixie/fixie
+ #70 (all)(New) Added InlineTable<TRow>, VerifiableDataTable<TRow>, TableValidator<TRow> classes to represent tabular step method parameters and Table class to create them
+ #117 (XUnit2)(New) Added experimental ClassCollectionBehavior attribute allowing inter-class test parallelization